--- a/package.json
+++ b/package.json
@@ -4,28 +4,32 @@
   "description": "Sistema bancario completo e modulare per istituti finanziari con integrazione nativa per criptovalute",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"npm run dev:api\" \"npm run dev:frontend\"",
-    "dev:api": "nodemon api-gateway/src/server.js",
+    "dev": "concurrently \"npm run dev:core\" \"npm run dev:frontend\"",
+    "dev:core": "cd core-banking && npm run dev",
     "dev:frontend": "cd frontend && npm start",
-    "build": "npm run build:api && npm run build:frontend",
-    "build:api": "cd api-gateway && npm run build",
-    "build:frontend": "cd frontend && npm run build",
-    "start": "docker-compose up -d",
-    "stop": "docker-compose down",
-    "restart": "docker-compose restart",
+    "start:all": "concurrently \"npm run start:core\" \"npm run start:frontend\"",
+    "start:core": "cd core-banking && node src/test-server-simple.js",
+    "start:frontend": "cd frontend && npm start",
+    "start:docker": "docker-compose up -d",
+    "stop:docker": "docker-compose down",
+    "restart:docker": "docker-compose restart",
     "logs": "docker-compose logs -f",
-    "setup": "./scripts/setup.sh",
+    "setup": "npm run setup:core && npm run setup:frontend",
+    "setup:core": "cd core-banking && npm install",
+    "setup:frontend": "cd frontend && npm install",
     "init-db": "./scripts/init-db.sh",
-    "test": "npm run test:api && npm run test:frontend",
-    "test:api": "cd api-gateway && npm test",
+    "test": "npm run test:core && npm run test:frontend",
+    "test:core": "cd core-banking && npm test",
     "test:frontend": "cd frontend && npm test",
-    "lint": "npm run lint:api && npm run lint:frontend",
-    "lint:api": "cd api-gateway && npm run lint",
+    "build": "npm run build:frontend",
+    "build:frontend": "cd frontend && npm run build",
+    "lint": "npm run lint:core && npm run lint:frontend",
+    "lint:core": "cd core-banking && npm run lint",
     "lint:frontend": "cd frontend && npm run lint",
     "security": "npm audit && npm run security:scan",
     "security:scan": "snyk test",
-    "docs": "npm run docs:api && npm run docs:frontend",
-    "docs:api": "cd api-gateway && npm run docs",
+    "docs": "npm run docs:core && npm run docs:frontend",
+    "docs:core": "cd core-banking && npm run docs",
     "docs:frontend": "cd frontend && npm run docs"
   },
   "keywords": [
